--- a/test.html
+++ b/test.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet"  media="screen and (min-width: 900px)" href="./laptop.css" type="text/css">
-    <link rel="stylesheet"  media="screen and (max-width: 899px) and (min-width: 600px)" href="./tablet.css" type="text/css">
-    <link rel="stylesheet"  media="screen and (max-width: 599px)" href="./phone.css" type="text/css">
-
+    <link rel="stylesheet"  media="screen and (min-width: 900px)" href="./assets/stylesheets/laptop.css" type="text/css">
+    <link rel="stylesheet"  media="screen and (max-width: 899px) and (min-width: 600px)" href="./assets/stylesheets/tablet.css" type="text/css">
+    <link rel="stylesheet"  media="screen and (max-width: 599px)" href="./assets/stylesheets/phone.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
@@ -15,22 +14,84 @@
         <div class="topHalf">
             <div class="topBar row">
                 <div class="whiteLogo">LOGO</div>
+                <div class="rightSideLinks row">
+                    <div class="LINK"><a class="topLinks" href="#">FAQ</a></div>
+                    <div class="LINK"><a class="topLinks" href="#">Generic Schedule</a></div>
+                    <div class="LINK"><a class="topLinks" href="#">Generic Text</a></div>
+                </div>
             </div>
-            <div class="textAndEmail">
+            <div class="textAndEmailRow">
+                <div class="centerDiv">
+                    <p>Text <span style="font-weight: bold">Everyday, Everything, Everywhere</span></p>
+                    <p>and your generic text <span style="font-weight: bold">fully-funded Text</span></p>
+                    <div class="inputRow row">
+                        <input type="text" placeholder="Email Address" class="emailInput">
+                        <select class="districtSelector">
+                            <option value="" disabled selected>Select Your District</option>
+                            <option value="District One">District One</option>
+                            <option value="District Two">District Two</option>
+                            <option value="District">District Three </option>
+                            <option value="District">District Four</option>
+                            <option value="District">District Five</option>
+                            <option value="District">District Six</option>
+                            <option value="District">District Seven</option>
+                            <option value="District">District Eight</option>
+                            <option value="District">District Nine</option>
+                            <option value="District">District Ten</option>
+                        </select>
+                        <button class="goButton">GO</button>
+                    </div>
+                </div>
             </div>
-            <div class="checkAndText">
+            <div class="checkAndText row">
+                <input type="checkbox" class="checkmark">
+                <h4 class="receiveUpdates">I'd like to receive updates from Generic Text about this program</h4>
             </div>
         </div>
         <div class="bottomHalf">
-            <div class="bottomLeftSide">                
+            <div class="bottomLeftSide">
+                <p class="bottomLeftText">There are Currently<br>
+                <span id="result">0</span><br>
+                Pledges from the 10<br>
+                Districts fo City, ST</p>                
             </div>
             <div class="bottomCenterLogo">
+                <div class="centerLine">
+                    <img  class="logoImage" src="./assets/images/recycle-circle.png" alt="">
+                </div>
             </div>
-            <div class="bottomRightSide">
+            <div class="bottomRightSide" id="putMeIn">
+                <h3 class="leaderboardColor">Leaderboard</h3>
             </div>
         </div>
         <div class="plainFooter">
+            <p>2015 Generic Text</p>
         </div>
     </div>
+    <script>
+        var districts = [112, 98, 119, 126, 129, 44, 118, 125, 101, 27]
+        function theDistricts(districts){
+            var total = 0
+            for(var x = 0; x <= districts.length - 1; x++){
+                total += districts[x]
+                document.getElementById('putMeIn').innerHTML = document.getElementById('putMeIn').innerHTML + "<p style='font-size: 12px; font-weight: bold'> District " + (x + 1) + ": " + districts[x] + " Pledges </p>"
+            };
+            return total;
+            }
+        function increment(amount){
+            var number = document.getElementById('result').innerHTML
+            if(number < amount){
+                number++
+                document.getElementById('result').innerHTML = number;
+            }
+        }
+        var amount = theDistricts(districts)
+        function themBarz(districts){
+            
+        }
+        document.onload = setInterval(function(){increment(amount)}, 0.5)
+
+
+    </script>
 </body>
 </html>
