normal size done

--- a/test.html
+++ b/test.html
@@ -13,7 +13,9 @@
     <div class="wrapper">
         <div class="topHalf">
             <div class="topBar row">
-                <div class="whiteLogo">LOGO</div>
+                <div class="whiteLogo">
+                    <p>LOGO</p>
+                </div>
                 <div class="rightSideLinks row">
                     <div class="LINK"><a class="topLinks" href="#">FAQ</a></div>
                     <div class="LINK"><a class="topLinks" href="#">Generic Schedule</a></div>
@@ -25,7 +27,7 @@
                     <p>Text <span style="font-weight: bold">Everyday, Everything, Everywhere</span></p>
                     <p>and your generic text <span style="font-weight: bold">fully-funded Text</span></p>
                     <div class="inputRow row">
-                        <input type="text" placeholder="Email Address" class="emailInput">
+                        <input type="text" placeholder="  Email Address" class="emailInput">
                         <select class="districtSelector">
                             <option value="" disabled selected>Select Your District</option>
                             <option value="District One">District One</option>
@@ -44,6 +46,7 @@
                 </div>
             </div>
             <div class="checkAndText row">
+                c
                 <input type="checkbox" class="checkmark">
                 <h4 class="receiveUpdates">I'd like to receive updates from Generic Text about this program</h4>
             </div>
@@ -65,7 +68,7 @@
             </div>
         </div>
         <div class="plainFooter">
-            <p>2015 Generic Text</p>
+            <p>&copy;2015 Generic Text</p>
         </div>
     </div>
     <script>
