--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <div class="topHalf">
-            <div class="topBar row">
+            <div class="topBar">
                 <div class="whiteLogo">
                     <p>LOGO</p>
                 </div>
@@ -26,7 +26,7 @@
                 <div class="centerDiv">
                     <p>Text <span style="font-weight: bold">Everyday, Everything, Everywhere</span></p>
                     <p>and your generic text <span style="font-weight: bold">fully-funded Text</span></p>
-                    <div class="inputRow row">
+                    <div class="inputRow">
                         <input type="text" placeholder="  Email Address" class="emailInput">
                         <select class="districtSelector">
                             <option value="" disabled selected>Select Your District</option>
