Did some things to help myself sleep at night

--- a/test.html
+++ b/test.html
@@ -56,7 +56,7 @@
                 <p class="bottomLeftText">There are Currently<br>
                 <span id="result">0</span><br>
                 Pledges from the 10<br>
-                Districts fo City, ST</p>                
+                Districts for City, ST</p>                
             </div>
             <div class="bottomCenterLogo">
                 <div class="centerLine">
@@ -65,36 +65,22 @@
             </div>
             <div class="bottomRightSide" id="putMeIn">
                 <h3 class="leaderboardColor">Leaderboard</h3>
+                <div class="districtMarker p row"><span style="background-color: #4071B6; color: #18599D">District 1 </span><div class="barre"></div> <div class="pledgeAmount p"></div></div>
+                <div class="districtMarker p row"><span style="background-color: #4071B6; color: #18599D">District 2</span><div class="barre"></div> <div class="pledgeAmount p"></div></div>
+                <div class="districtMarker p row"><span style="background-color: #4071B6; color: #18599D">District 3</span><div class="barre"></div> <div class="pledgeAmount p"></div></div>
+                <div class="districtMarker p row"><span style="background-color: #4071B6; color: #18599D">District 4</span><div class="barre"></div> <div class="pledgeAmount p"></div></div>
+                <div class="districtMarker p row"><span style="background-color: #4071B6; color: #18599D">District 5</span><div class="barre"></div> <div class="pledgeAmount p"></div></div>
+                <div class="districtMarker p row"><span style="background-color: #4071B6; color: #18599D">District 6</span><div class="barre"></div> <div class="pledgeAmount p"></div></div>
+                <div class="districtMarker p row"><span style="background-color: #4071B6; color: #18599D">District 7</span><div class="barre"></div> <div class="pledgeAmount p"></div></div>
+                <div class="districtMarker p row"><span style="background-color: #4071B6; color: #18599D">District 8</span><div class="barre"></div> <div class="pledgeAmount p"></div></div>
+                <div class="districtMarker p row"><span style="background-color: #4071B6; color: #18599D">District 9</span><div class="barre"></div> <div class="pledgeAmount p"></div></div>
+                <div class="districtMarker p row"><span style="background-color: #4071B6; color: #18599D">District 10</span><div class="barre"></div> <div class="pledgeAmount p"></div></div>
             </div>
         </div>
         <div class="plainFooter">
             <p>&copy;2015 Generic Text</p>
         </div>
     </div>
-    <script>
-        var districts = [112, 98, 119, 126, 129, 44, 118, 125, 101, 27]
-        function theDistricts(districts){
-            var total = 0
-            for(var x = 0; x <= districts.length - 1; x++){
-                total += districts[x]
-                document.getElementById('putMeIn').innerHTML = document.getElementById('putMeIn').innerHTML + "<p style='font-size: 12px; font-weight: bold'> District " + (x + 1) + ": " + districts[x] + " Pledges </p>"
-            };
-            return total;
-            }
-        function increment(amount){
-            var number = document.getElementById('result').innerHTML
-            if(number < amount){
-                number++
-                document.getElementById('result').innerHTML = number;
-            }
-        }
-        var amount = theDistricts(districts)
-        function themBarz(districts){
-            
-        }
-        document.onload = setInterval(function(){increment(amount)}, 0.5)
-
-
-    </script>
+    <script src="./assets/javascript/test.js"></script>
 </body>
 </html>
